# idealNN

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  coverage.html  coverage.html~  make_debug.sh  make_release.sh  make_test.sh  make_valgrind.sh  setup_env.sh
.github/workflows/: cmake.yml  doxygen.yml
extra/: logo.xcf
extra/iris/: IRIS.norm.csv
include/: Common.h
include/Activation/: SoftmaxActivation.h  TanhActivation.h
include/Layer/: Layer.h  LinearLayer.h
include/Loss/: CrossEntropyLoss.h  Loss.h  MSELoss.h
include/Optimizer/: SDGOptimizer.h
src/: Common.h  DataLoader.cpp  DataLoader.h  Tensor.cpp  Tensor.h  Utils.cpp  Utils.h  sequential.cpp  sequential.hpp
src/Activation/: Activation.cpp  Activation.h  RELUActivation.cpp  RELUActivation.h  SigmoidActivation.cpp  SigmoidActivation.h  SoftmaxActivation.cpp  SoftmaxActivation.h  TanhActivation.cpp  TanhActivation.h
src/DataLoader/: CSVDataLoader.cpp  CSVDataLoader.h  DataLoader.cpp  DataLoader.h
src/Layer/: Dense.cpp  Dense.h  Layer.cpp  Layer.h  LinearLayer.cpp  LinearLayer.h  Sequential.cpp  Sequential.h
src/Layers/: Dense.cpp  Dense.h  Layer.cpp  Layer.h  Sequential.cpp  Sequential.h
src/Loss/: CrossEntropyLoss.cpp  CrossEntropyLoss.h  Loss.h  MSELoss.cpp  MSELoss.h
src/Optimizer/: Optimizer.h  SDGOptimizer.cpp  SDGOptimizer.h
src/Tensor/: Tensor.cpp  Tensor.h  Tensor1D.cpp  Tensor1D.h
src/layers/: layer.cpp  layer.hpp
test/: backward_test.cpp  base_test.cpp  classification_test.cpp  csv_loader.cpp  csvloader_test.cpp  forward_test.cpp  loss_test.cpp  main_test.cpp  optimizer_test.cpp  regression_test.cpp
